<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/characterImage"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:adjustViewBounds="true"
        android:alpha="0"
        android:contentDescription="@null"
        android:fitsSystemWindows="true"
        android:scaleType="centerCrop"
        android:src="@drawable/image_not_available"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:alpha="0"
        android:contentDescription="@null"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_button" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backButtonSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:contentDescription="@null"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:visibility="visible"

        android:paddingBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/separator"
        app:srcCompat="@drawable/ic_back_button" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/toolbarTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="19sp"
        android:textStyle="bold"
        android:translationZ="9999dp"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="@+id/backButtonSecondary"
        app:layout_constraintBottom_toBottomOf="@+id/backButtonSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="24dp"
        android:alpha="0"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:translationZ="9999dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/characterImage" />


    <View
        android:id="@+id/overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0"
        android:background="@drawable/actionbar_overlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title" />

    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:alpha="1"
        android:background="@drawable/shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="14dp"
            app:cardCornerRadius="25dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="14dp"
                android:orientation="vertical">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/characterDetail"
                    style="@style/TextViewStyleHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/character_info"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/characterDescriptionLabel"
                    style="@style/LabelTextViewStyle"
                    android:text="@string/character_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/characterDetail" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/characterDescription"
                    style="@style/FieldTextViewStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/characterDescriptionLabel"
                    tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/characterComicsLabel"
                    style="@style/LabelTextViewStyle"
                    android:text="@string/character_comics"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/characterDescription" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvComics"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/characterComicsLabel"
                    tools:listitem="@layout/item_comic" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/characterSeriesLabel"
                    style="@style/LabelTextViewStyle"
                    android:text="@string/character_series"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rvComics" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvSeries"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/characterSeriesLabel"
                    tools:listitem="@layout/item_series" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.motion.widget.MotionLayout>